# aidl-cpp

./: .gitignore  Android.mk  CMakeLists.txt  Type.cpp  Type.h  aidl.cpp  aidl.h  aidl_language.cpp  aidl_language.h  aidl_language_l.l  aidl_language_l.ll  aidl_language_y.y  aidl_language_y.yy  aidl_unittest.cpp  ast_cpp.cpp  ast_cpp.h  ast_cpp_unittest.cpp  ast_java.cpp  ast_java.h  ast_java_unittest.cpp  code_writer.cpp  code_writer.h  generate_cpp.cpp  generate_cpp.h  generate_cpp_unittest.cpp  generate_java.cpp  generate_java.h  generate_java_binder.cpp  import_resolver.h  io_delegate.cpp  io_delegate.h  line_reader.h  logging.h  main.cpp  main_cpp.cpp  main_java.cpp  options.cpp  options.h  options_unittest.cpp  parse_helpers.cpp  (+11 more)
base/: logging.cpp
docs/: aidl-cpp.md  making-changes.md
tests/: aidl_test_client.cpp  aidl_test_client_file_descriptors.cpp  aidl_test_client_nullables.cpp  aidl_test_client_parcelables.cpp  aidl_test_client_parcelables.h  aidl_test_client_primitives.cpp  aidl_test_client_utf8_strings.cpp  aidl_test_client_utf8_strings.h  aidl_test_service.cpp  end_to_end_tests.cpp  example_interface_test_data.cpp  fake_io_delegate.cpp  fake_io_delegate.h  integration-test.py  simple_parcelable.cpp  test_data.h  test_data_example_interface.cpp  test_data_ping_responder.cpp  test_data_string_constants.cpp  test_helpers.h  test_util.cpp  test_util.h
tests/aidl/android/os/: IPingResponder.aidl
tests/android/aidl/tests/: ITestService.aidl  (+1 more)
tests/java_app/: AndroidManifest.xml  README
tests/ping_responder/: helloc.cpp  hellod.cpp
(+4 files in other folders)
